--- a/static/css/style.css
+++ b/static/css/style.css
@@ -14,26 +14,45 @@ html {
 }
 
 /* CSS from the leaflet-choropleth documentation */
+.info.legend {
+  background: white;
+  padding: 10px;
+  border-radius: 5px;
+  box-shadow: 0 0 5px rgba(0,0,0,0.5);
+}
+
+.info.legend i {
+  width: 20px;
+  height: 20px;
+  float: left;
+  margin-right: 8px;
+}
+
 .legend {
   color: #555;
   padding: 6px 8px;
-  font: 12px Arial, Helvetica, sans-serif;
+  font: 15px Arial, Helvetica, sans-serif;
   font-weight: bold;
   background: white;
   background: rgba(255,255,255,0.8);
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   border-radius: 5px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 .legend ul {
   list-style-type: none;
   padding: 0;
   margin: 0;
   clear: both;
+  display: flex;
 }
 .legend li {
   display: inline-block;
   width: 30px;
   height: 22px;
+  margin-right: 5px;
 }
 .legend .min {
   float: left;
